完善生产逻辑